update languages list

--- a/app/lang/ru.json
+++ b/app/lang/ru.json
@@ -43,7 +43,7 @@
 			"Some long text:": "",
 			"Title text": "",
 			"Virtual keyboard": "",
-			"You need add url to your test file in code.": "",
+			"You may change url to your test file in code.": "",
 			"info": "",
 			"menu": ""
 		}
