--- a/src/lang/messages.pot
+++ b/src/lang/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mag-boilerplate 1.1.1\n"
 "Report-Msgid-Bugs-To: darkpark.main@gmail.com\n"
-"POT-Creation-Date: 2018-08-28 11:15+0300\n"
+"POT-Creation-Date: 2018-08-29 10:58+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -125,7 +125,7 @@ msgstr ""
 msgid "Virtual keyboard"
 msgstr ""
 
-msgid "You need add url to your test file in code."
+msgid "You may change url to your test file in code."
 msgstr ""
 
 msgid "info"
